feat: core 버전 업 및 swagger 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,10 @@ server:
 jwt:
   accessTokenValidMS: 3600000
   refreshTokenValidMS: 604800000
-spring:
-  profiles:
-    active: dev
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    base-package: "com.ssu.commerce.delivery"
+    title: Delivery
+    version: 0.0.0
